--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,12 @@
         android:layout_height="wrap_content"
         android:text="@string/text_simple"
         android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/main_activity_single"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/text_single"
+        android:textAllCaps="false" />
 </LinearLayout>
